--- a/Project_期中專案/Project_期中專案.csproj
+++ b/Project_期中專案/Project_期中專案.csproj
@@ -91,6 +91,12 @@
     <Compile Include="Follows.cs">
       <DependentUpon>PJ_db.tt</DependentUpon>
     </Compile>
+    <Compile Include="ForgetPas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ForgetPas.Designer.cs">
+      <DependentUpon>ForgetPas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,12 @@
     <Compile Include="OrderStatuses.cs">
       <DependentUpon>PJ_db.tt</DependentUpon>
     </Compile>
+    <Compile Include="OverWriteCustDB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OverWriteCustDB.Designer.cs">
+      <DependentUpon>OverWriteCustDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Payment.cs">
       <DependentUpon>PJ_db.tt</DependentUpon>
     </Compile>
@@ -175,6 +187,9 @@
     <Compile Include="SmallType.cs">
       <DependentUpon>PJ_db.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ForgetPas.resx">
+      <DependentUpon>ForgetPas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -186,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="member_cre.resx">
       <DependentUpon>member_cre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OverWriteCustDB.resx">
+      <DependentUpon>OverWriteCustDB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
