--- a/Project_期中專案/App.config
+++ b/Project_期中專案/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="iSpanProjectEntities" connectionString="metadata=res://*/PJ_db.csdl|res://*/PJ_db.ssdl|res://*/PJ_db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=iSpanProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="iSpanProjectEntities" connectionString="metadata=res://*/PJ_db.csdl|res://*/PJ_db.ssdl|res://*/PJ_db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=iSpanProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="iSpanProjectEntities1" connectionString="metadata=res://*/db_pj.csdl|res://*/db_pj.ssdl|res://*/db_pj.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=iSpanProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="iSpanProjectEntities2" connectionString="metadata=res://*/db_pj.csdl|res://*/db_pj.ssdl|res://*/db_pj.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=iSpanProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
